SubBt/force-app/main/default/objects/Cost_Codes__c/Cost_Codes__c.object-meta.xml
<CustomObject>
    <label>Cost Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>