SubBt/force-app/main/default/objects/Cost_Codes__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Center1</fullName>
            </value>
            <value>
                <fullName>Cost Center2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>