SubBt/force-app/main/default/objects/Cost_Codes__c/fields/Cost_Code_List__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code_List__c</fullName>
    <label>Cost Code List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Overbudget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>