SubBt/force-app/main/default/objects/Cost_Codes__c/fields/Cost_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code_Name__c</fullName>
    <formula>text(Major__c)+&apos;-&apos;+text(Minor__c) + &apos;-&apos;+Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>