SubBt/force-app/main/default/objects/Cost_Codes__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Cost Code Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Division 1 — General Requirements</fullName>
            </value>
            <value>
                <fullName>Division 2 — Site Construction</fullName>
            </value>
            <value>
                <fullName>Division 3 — Concrete</fullName>
            </value>
            <value>
                <fullName>Division 4 — Masonry (Ex. Concrete block)</fullName>
            </value>
            <value>
                <fullName>Division 5 — Metals (Ex. Beams)</fullName>
            </value>
            <value>
                <fullName>Division 6 — Wood and Plastics</fullName>
            </value>
            <value>
                <fullName>Division 7 — Thermal and Moisture Protection</fullName>
            </value>
            <value>
                <fullName>Division 8 — Doors and Windows</fullName>
            </value>
            <value>
                <fullName>Division 9 — Finishes</fullName>
            </value>
            <value>
                <fullName>Division 10 — Specialties</fullName>
            </value>
            <value>
                <fullName>Division 11 — Equipment</fullName>
            </value>
            <value>
                <fullName>Division 12 — Furnishings</fullName>
            </value>
            <value>
                <fullName>Division 13 — Special Construction</fullName>
            </value>
            <value>
                <fullName>Division 14 — Conveying Systems</fullName>
            </value>
            <value>
                <fullName>Division 15 — Mechanical (Ex. Plumbing and HVAC)</fullName>
            </value>
            <value>
                <fullName>Division 16 — Electrical</fullName>
            </value>
            <value>
                <fullName>Division 17 — Markup and Contingency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>