SubBt/force-app/main/default/objects/Cost_Codes__c/fields/G_L_Code__c.field-meta.xml
<CustomField>
    <fullName>G_L_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>G/L Code</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Cost Codes</relationshipLabel>
    <relationshipName>Cost_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>