SubBt/force-app/main/default/objects/Cost_Codes__c/fields/Major_Description__c.field-meta.xml
<CustomField>
    <fullName>Major_Description__c</fullName>
    <label>Major Description</label>
    <type>TextArea</type>
</CustomField>