SubBt/force-app/main/default/objects/Cost_Codes__c/fields/Minor_Description__c.field-meta.xml
<CustomField>
    <fullName>Minor_Description__c</fullName>
    <label>Minor Description</label>
    <type>TextArea</type>
</CustomField>