SubBt/force-app/main/default/objects/Cost_Codes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cost_Code_Name__c</columns>
    <columns>NAME</columns>
    <columns>Division__c</columns>
    <columns>Major_Description__c</columns>
    <columns>Major__c</columns>
    <columns>Minor_Description__c</columns>
    <columns>Minor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>